Alignment fix

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -11,15 +11,13 @@ html {
   padding-left: 10px;
 }
 
-.timeline > article > h3 {
-  margin-left: -16px;
-}
-
 .timeline > article > h3:before {
   content: "";
+  display: inline-block;
   background: var(--color-primary-400);
   min-width: 10px;
   height: 10px;
   border-radius: 5px;
-  margin-right: 10px;
+  margin-left: -15.5px;
+  margin-right: 5.5px;
 }
